--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,22 @@
 <resources>
-    <string name="app_name">BeWarned Video Call</string>
+    <string name="app_name">Connect Interpreter</string>
     <string name="main_call_to_action">Press to connect with interpreter</string>
     <string name="main_minutes_left">Minutes left for today:</string>
     <string name="current_call">Current call</string>
     <string name="left_for_today">Left for today</string>
     <string name="cancel">Cancel</string>
-    <string name="video_call_waiting_title">Waiting for answer...</string>
+    <string name="video_call_waiting_title">Waiting for answer…</string>
     <string name="video_call_waiting_text">Please, hold the line while we are connecting you with the interpreter. It could take till 5 minutes</string>
     <string name="permission_rationale_call">Audio and video record permission is required for the call to translator.</string>
     <string name="error_call_failed">Failed to call</string>
     <string name="err_call_try_later">Something happens while trying to call. Please try again later</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
+    <string name="no_minutes_left">You have exhausted daily minutes.\nNew minutes will be available tomorrow</string>
+    <string name="main_wait_minutes_loading">Please wait…\nChecking your remaining minutes</string>
+    <string name="internet_failure">Server connection error. Check your internet connection</string>
+    <string name="name_hint">Your name</string>
+    <string name="proceed">Proceed</string>
+    <string name="user_name">Hello, <u>%s</u></string>
+    <string name="user_name_dialog_title">What is your name?</string>
+    <string name="test_mode_notification">Сервис предоставляется в тестовом режиме</string>
 </resources>
