--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Connect Перекладач</string>
+    <string name="app_name">Перекладач ЖМ</string>
     <string name="cancel">Відміна</string>
     <string name="current_call">Поточний виклик</string>
     <string name="err_call_try_later">Під час виклику виникла помилка. Спробуйте пізніше</string>
@@ -21,7 +21,7 @@
     <string name="user_name_dialog_title">Як Вас звати?</string>
     <string name="test_mode_notification">Сервіс надається у тестовому режимі\nв робочі дні з 09:00 до 18:00</string>
     <string name="app_outdated">Додаток застарілий. Будь ласка, оновіть додаток, щоб продовжити</string>
-    <string name="not_work_time">На даний момент перекладачі не доступні</string>
+    <string name="not_work_time">На жаль, ви телефонуєте в неробочий час</string>
     <string name="reason_alert_title">Оберіть причину дзвінка</string>
     <string name="call_reason_emergency">Виклик швидкої</string>
     <string name="call_reason_police">Виклик поліції</string>
