--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
     <string name="error_call_failed">Звонок не удался</string>
     <string name="left_for_today">Осталось на сегодня</string>
     <string name="main_call_to_action">Нажмите для связи с переводчиком</string>
-    <string name="main_minutes_left">Минут осталось на сегодня:</string>
+    <string name="main_minutes_left">Минут осталось:</string>
     <string name="ok">Ок</string>
     <string name="permission_rationale_call">Для общения с переводчиком необходимо разрешить доступ к камере и микрофону</string>
     <string name="video_call_waiting_text">Пожалуйста, дождитесь пока мы соеденим вас с переводчиком. Это может занять до 5 минут</string>
@@ -21,7 +21,6 @@
     <string name="user_name_dialog_title">Как Вас зовут?</string>
     <string name="test_mode_notification">Сервис предоставляется в тестовом режиме\nв рабочие дни с 09:00 до 18:00</string>
     <string name="app_outdated">Приложение устарело. Пожалуйста, обновите приложение, чтобы продолжить</string>
-    <string name="not_work_time">К сожалению, вы звоните в нерабочее время</string>
     <string name="reason_alert_title">Выберите причину звонка</string>
     <string name="call_reason_emergency">Вызов скорой</string>
     <string name="call_reason_police">Вызов полиции</string>
@@ -34,4 +33,25 @@
     <string name="call_reason_talk">Поболтать</string>
     <string name="call_reason_other">Другое</string>
     <string name="error_global">Ошибка</string>
+    <string name="prompt_phone">Номер телефона</string>
+    <string name="action_request_code">Отправить код</string>
+    <string name="action_login">Войти</string>
+    <string name="login_code_helper">Вы получите смс с кодом подтверждения</string>
+    <string name="login_code_delay">Следующая попытка будет доступна через %d сек</string>
+    <string name="menu_logout">Выход</string>
+    <string name="error_server_base">К сожалению, возникла ошибка. Попробуйте позже</string>
+    <string name="error_validation">Пожалуйста, введите коректные данные</string>
+    <string name="error_login">Ошибка входа</string>
+    <string name="error_outside_working_time">К сожалению, вы звоните в нерабочее время</string>
+    <string name="error_in_call">Вы уже общаетесь на другом устройстве</string>
+    <string name="error_no_right">У вас нет прав на совершение данного действия</string>
+    <string name="login_accept"><![CDATA[Я прочитал и согласен с <a href=\'https://getbewarned.com\'>политикой конфиденциальности</a>]]></string>
+    <string name="main_active_till">Безлимитные звонки до</string>
+    <string name="date_format">dd.MM.yy</string>
+    <string name="buy_unlim_btn">Купить безлимит</string>
+    <string name="not_available_desc">У вас не осталось минут для использования сервиса.\nВы можете дождаться завтра для получения бесплатных минут либо купить безлимитное использование</string>
+    <string name="tariff_pattern">%s - %sгрн</string>
+    <string name="permission_rationale_liqpay">Необходимо предоставить доступ к звонкам для завершения процесса покупки</string>
+    <string name="call_chat_hint">Введите ваше сообщение</string>
+    <string name="message_enter_label">Отправить</string>
 </resources>
