--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">SL Interpreter</string>
     <string name="main_call_to_action">Press to connect with interpreter</string>
-    <string name="main_minutes_left">Minutes left for today:</string>
+    <string name="main_minutes_left">Minutes left:</string>
     <string name="current_call">Current call</string>
     <string name="left_for_today">Left for today</string>
     <string name="cancel">Cancel</string>
@@ -21,7 +21,6 @@
     <string name="test_mode_notification">Сервис предоставляется в тестовом режиме</string>
     <string name="facebook_app_id" translatable="false">1134966689967629</string>
     <string name="app_outdated">App is outdated. Please update the app to continue</string>
-    <string name="not_work_time">Unfortunately, you are calling outside office hours</string>
     <string name="reason_alert_title">Choose call reason</string>
     <string name="call_reason_emergency">Call to emergency</string>
     <string name="call_reason_police">Call to police</string>
@@ -48,4 +47,29 @@
         <item>@string/call_reason_talk</item>
         <item>@string/call_reason_other</item>
     </string-array>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_phone">Phone</string>
+    <string name="prompt_password">Code</string>
+    <string name="action_request_code">Request code</string>
+    <string name="action_login">Login</string>
+    <string name="login_code_helper">You will receive sms with confirmation code</string>
+    <string name="login_code_delay">Next request will be available in %d sec</string>
+    <string name="menu_logout">Logout</string>
+    <string name="error_server_base">Sorry, error occurred. Please try later</string>
+    <string name="error_validation">Please enter correct data</string>
+    <string name="error_login">Login failed</string>
+    <string name="error_outside_working_time">Unfortunately, you are calling outside office hours</string>
+    <string name="error_in_call">You\'ve already calling from other device</string>
+    <string name="error_no_right">You have no right to complete this operation</string>
+    <string name="login_accept"><![CDATA[I have read and agree to the <a href=\'https://getbewarned.com\'>privacy policy</a>]]></string>
+    <string name="date_format">MM/dd/yy</string>
+    <string name="main_active_till">Unlimited calls till</string>
+    <string name="buy_unlim_btn">Buy unlim</string>
+    <string name="not_available_desc">You have no minutes to continue using service.\nYou can wait till tomorrow to get another free minutes or you can buy unlimited usage</string>
+    <string name="tariff_pattern">%s - %sUAH</string>
+    <string name="permission_rationale_liqpay">You have to grant access to calls to complete payment process</string>
+    <string name="call_chat_hint">Type your message</string>
+    <string name="message_enter_label">Send</string>
 </resources>
